--- a/config_example.yml
+++ b/config_example.yml
@@ -1,12 +1,22 @@
 # 数据库链接信息
-DB_NAME: maxkb
-DB_HOST: localhost
+DB_NAME: maxkb01
+#DB_HOST: localhost
+DB_HOST: my-postgres5.ns-fyk835yb.svc.cluster.local
 DB_PORT: 5432
 DB_USER: root
-DB_PASSWORD: xxxxxxx
+DB_PASSWORD: huangyao8988
 DB_ENGINE: django.db.backends.postgresql_psycopg2
 
 DEBUG: false
 
 TIME_ZONE: Asia/Shanghai
 
+# 模型相关配置
+# 模型路径:如果EMBEDDING_MODEL_NAME是绝对路径则无效,反之则会从https://huggingface.co/下载模型到当前目录
+EMBEDDING_MODEL_PATH: /opt/maxkb/model/
+# 模型名称:如果模型名称是路径,则会加载目录下的模型,如果是模型名称,则会在https://huggingface.co/下载模型 模型的下载位置为EMBEDDING_MODEL_PATH
+EMBEDDING_MODEL_NAME: /opt/maxkb/model/shibing624_text2vec-base-chinese
+
+# GPT2模型配置
+GPT2_TOKENIZER_MODEL_PATH: /opt/maxkb/app/models/tokenizer
+GPT2_TOKENIZER_MODEL_NAME: /opt/maxkb/app/models/tokenizer/gpt2
